--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+input-pad (1.0.0-1) unstable; urgency=low
+
+  * New upstream release
+  * Set Vcs to git.debina.org 
+  * Bump libinput-pad0 to libinput-pad1
+
+ -- Asias He <asias.hejun@gmail.com>  Sun, 20 Mar 2011 09:46:10 +0800
+
 input-pad (0.1.2-1) unstable; urgency=low
 
   [ Asias He ]
